@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: mire: teardown for platpat on exit needs to be done in order.
     - jbj: rpmwget: move to tools.
     - jbj: rpmio: more random line noise reduction, diff'ing against HEAD.
     - jbj: rpmio: backport HTTP transport from HEAD.
